# cartosky

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: python-package.yml
cartosky/: __init__.py  constants.py  core.py  crs.py  healpix.py  proj.py  skyaxes.py  survey.py  utils.py  zoom.py
cartosky/instrument/: __init__.py  camera.py  decam.py  macho.py
docs/: Makefile  conf.py  environment.yml  index.rst  requirements.txt
tests/: test_skymap.py  test_tutorial.py
tutorial/: README.md  tutorial1_baseclass.ipynb  tutorial2_subclass.ipynb  tutorial3_healpix.ipynb  tutorial4_decam.ipynb  tutorial5_healsparse.ipynb
