# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = cartosky/_version.py
versionfile_build = cartosky/_version.py
tag_prefix = v
parentdir_prefix = cartosky-

[flake8]
max-line-length = 110
# ignore = E133, E225, E226, E228, E231, N802, N803, N806, N812, N815, N816, W504
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude =
  **/__init__.py,
  docs,
  build

[metadata]
description-file = README.md

